--- a/src/main/resources/templates/listaProductos.html
+++ b/src/main/resources/templates/listaProductos.html
@@ -102,8 +102,8 @@
                     <th>ID</th>
                     <th>MARCA</th>
                     <th>MODELO</th>
-                    <th>PRECIO COMPRA</th>
-                    <th>PRECIO VENTA</th>
+                    <th>PRECIO ALTERNATIVO</th>
+                    <th>PRECIO ORIGINAL</th>
                     <th>CANTIDAD</th>
                 </tr>
 
