--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,33 +26,37 @@
 
 </head>
 <body>
-    <div class="modal-dialog text-center">
-        <div class="col-sm-8 main-section">
-            <div class="modal-content">
-                <div class="col-12 user-img">
-                    <img src="static/img/user.png" th:src="@{/img/user.png}"/>
-                </div>
-                <form class="col-12" th:action="@{/login}" method="post">
-                    <div class="form-group" id="user-group">
-                        <input type="text" class="form-control" placeholder="Nombre de usuario" name="username"/>
+    <div class="container">
+
+        <div class="modal-dialog text-center">
+            <div class="col-sm-8 main-section">
+                <div class="modal-content">
+                    <div class="col-12 user-img">
+                        <img src="static/img/user.png" th:src="@{/img/user.png}"/>
                     </div>
-                    <div class="form-group" id="contrasena-group">
-                        <input type="password" class="form-control" placeholder="Contrasena" name="password"/>
+                    <form class="col-12" th:action="@{/login}" method="post">
+                        <div class="form-group" id="user-group">
+                            <input type="text" class="form-control" placeholder="Nombre de usuario" name="username"/>
+                        </div>
+                        <div class="form-group" id="contrasena-group">
+                            <input type="password" class="form-control" placeholder="Contrasena" name="password"/>
+                        </div>
+                        <button type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i>  Ingresar </button>
+                    </form>
+                    <div class="col-12 forgot">
+                        <a href="#">Recordar contrasena?</a>
                     </div>
-                    <button type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i>  Ingresar </button>
-                </form>
-                <div class="col-12 forgot">
-                    <a href="#">Recordar contrasena?</a>
+                    <div th:if="${param.error}" class="alert alert-danger" role="alert">
+                        Invalid username and password.
+                    </div>
+                    <div th:if="${param.logout}" class="alert alert-success" role="alert">
+                        You have been logged out.
+                    </div>
                 </div>
-                <div th:if="${param.error}" class="alert alert-danger" role="alert">
-		            Invalid username and password.
-		        </div>
-		        <div th:if="${param.logout}" class="alert alert-success" role="alert">
-		            You have been logged out.
-		        </div>
             </div>
         </div>
     </div>
+
 
     
 </body>
