--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
     <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
     
-    <!-- SweetAlert -->
+    <!-- SweetAlert p -->
     
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<script src="/funciones.js"></script>
@@ -24,119 +24,123 @@
     
 </head>
 <body>
+  <div class="container">
 
-    <!---NavBar header-->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="#">GestionSPRING
-	  <img src="static/img/logo.png" th:src="@{/img/logo.png}"width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-	  </a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-	    <ul class="navbar-nav">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="/admin/listarproductos">Productos</a>
-	      </li>
-	      <li class="nav-item dropdown mr-auto" >
-	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          Administrador
-	        </a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-	          <a class="dropdown-item" href="/logout">Logout</a>
-	          
-	        </div>
-	      </li>
-	    </ul>
-	  </div>
-	</nav>
-	
+
+
+      <!---NavBar header-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">GestionSPRING
+      <img src="static/img/logo.png" th:src="@{/img/logo.png}"width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/listarproductos">Productos</a>
+          </li>
+          <li class="nav-item dropdown mr-auto" >
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Administrador
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="/logout">Logout</a>
+              
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
     
-    <div class="container mt-4">
-    	<!--  Barra de busqueda -->
-    	
-	    <form th:action="@{/admin/listar/}">
-			<div class="input-group">
-				 <input type="text" name="keyword" id="keyword" size="80" th:value="${keyword}" required placeholder="Buscar...">
-				 <div class="input-group-append" id="button-addon4">
-					 <input type="submit" value="Search" button class="btn btn-outline-secondary"></button>
-					 <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" button class="btn btn-outline-secondary"></button>
-			 	 </div>	
-			</div>	 	  	
-		</form>
-		
-		<br>
-		
-		<div class="alert alert-info" role="alert">
-		  Usar clear luego de la busqueda para volver al listado!
-		</div>
-    	
-    	
-       <a th:href="@{/admin/listar/new}" class="btn btn-primary btn-lg btn-block">Nuevo</a>
-    	
-    	
-    	
-	    	
-		
-        
       
-        <table class = "table">
-            <thead> 
-                <tr >
-                    <th>ID</th>
-                    <th>NOMBRE</th>
-                    <th>TELEFONO</th>
-                    <th>EQUIPO</th>
-                    <th>S/N</th>
-                    <th>ENTRADA</th>
-                    <th>SALIDA</th>
-                    <th>ACCIONES</th>
-                    
-                </tr>
+      <div class="container mt-4">
+        <!--  Barra de busqueda -->
+        
+        <form th:action="@{/admin/listar/}">
+        <div class="input-group">
+          <input type="text" name="keyword" id="keyword" th:value="${keyword}" required placeholder="Buscar...">
+          <div class="input-group-append" id="button-addon4">
+            <input type="submit" value="Search" button class="btn btn-outline-secondary"></button>
+            <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" button class="btn btn-outline-secondary"></button>
+          </div>	
+        </div>	 	  	
+      </form>
+      
+      <br>
+      
+      <div class="alert alert-info" role="alert">
+        Usar clear luego de la busqueda para volver al listado!
+      </div>
+      <a th:href="@{/admin/listar/new}" class="btn btn-primary btn-lg btn-block">Nuevo</a>
 
-            </thead>
+        <div class="card">
+          <div class="card-body">
+            <table class = "table">
+              <thead> 
+                  <tr >
+                      <th scope="col">ID</th>
+                      <th scope="col">NOMBRE</th>
+                      <th scope="col">TELEFONO</th>
+                      <th scope="col">EQUIPO</th>
+                      <th scope="col">S/N</th>
+                      <th scope="col">ENTRADA</th>
+                      <th scope="col">SALIDA</th>
+                      <th scope="col">ACCIONES</th>
+                      
+                  </tr>
 
-            <tbody>
-                <tr th:each = "persona:${personas}">
-                    <td th:text="${persona.id}"></td>
-                    <td  th:text="${persona.name}"></td>
-                    <td  th:text="${persona.telefono}"></td>
-                    <td  th:text="${persona.equipo}"></td>
-                    <td  th:text="${persona.serie}"></td>
-                    <td  th:text="${persona.fechaEntrada}"></td>
-                    <td  th:text="${persona.fechaSalida}"></td>
-                    
-                    
-                    
-                    <td >
-                    	<div>
-	                    	<a th:href="@{/admin/editar/}+${persona.id}" class ="btn btn-warning"> 
-	                        	<i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Editar!
-	                        </a>
-                    	</div>
-                        
-                        <br>
-                        <!--Hace referencia a una URL dentro del controlador, concatena con el id de persona
-                        para asociar la URL con el ID de la persona correspondiente
-                       
-                       -->
+              </thead>
+
+              <tbody>
+                  <tr th:each = "persona:${personas}">
+                      <td th:text="${persona.id}"></td>
+                      <td  th:text="${persona.name}"></td>
+                      <td  th:text="${persona.telefono}"></td>
+                      <td  th:text="${persona.equipo}"></td>
+                      <td  th:text="${persona.serie}"></td>
+                      <td  th:text="${persona.fechaEntrada}"></td>
+                      <td  th:text="${persona.fechaSalida}"></td>
+                      
+                      
+                      
+                      <td >
                         <div>
-	                        <button type= "button" th:onclick="eliminarpersona([[${persona.id}]])" class = "btn btn-danger" href="#">
-	                        	<span class="fas fa-trash-alt" aria-hidden="true"></span> Eliminar!
-	                        </button>
-                        
+                          <a th:href="@{/admin/editar/}+${persona.id}" class ="btn btn-warning"> 
+                              <i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Editar!
+                            </a>
                         </div>
+                          
+                          <br>
+                          <!--Hace referencia a una URL dentro del controlador, concatena con el id de persona
+                          para asociar la URL con el ID de la persona correspondiente
                         
-                    </td>
+                        -->
+                          <div>
+                            <button type= "button" th:onclick="eliminarpersona([[${persona.id}]])" class = "btn btn-danger" href="#">
+                              <span class="fas fa-trash-alt" aria-hidden="true"></span> Eliminar!
+                            </button>
+                          
+                          </div>
+                          
+                      </td>
 
-                </tr>
-            </tbody>
+                  </tr>
+              </tbody>
 
-        </table>
+          </table>
+
+
+          </div>
+        </div>      
+         
+      </div>
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
