--- a/src/main/resources/templates/listaProductos.html
+++ b/src/main/resources/templates/listaProductos.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <!--JQUERY-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gestion de Productos</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     
-    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    
+    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina -->
+    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+    <script src="/js/bootstrap.min.js"></script>
+        
     <!--Iconos de FontAwesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
     <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
@@ -18,138 +20,116 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<script src="/funciones.js"></script>
     
-
-
-    
-    
 </head>
 <body>
-
-    <!---NavBar header-->
+  
+      <!---NavBar header-->
+  <div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	  <a class="navbar-brand" href="#">
-	  GestionSPRING
-	  <img src="static/img/logo.png" th:src="@{/img/logo.png}"width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-	  </a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-	    <ul class="navbar-nav">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="/admin/listar">Clientes</a>
-	      </li>
-	      <li class="nav-item dropdown">
-	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          Administrador
-	        </a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-	          <a class="dropdown-item" href="/logout">Logout</a>
-	          
-	        </div>
-	      </li>
-	    </ul>
-	  </div>
-	</nav>
-               <!--   
-                <a  id="nav-a" href="#">Log out</a>
-                <a id="nav-a" href="#">Update</a>
-                <body>
-                
-			   <ul>
-			      <li><a href="#">Update</a></li>
-			      <li>
-			          <a>Username</a>
-			          <ul class="dropdown">
-			              <li><a href="#">Log out</a></li>
-			          </ul>
-			      </li>
-			   </ul>
-			
-				-->
+      <a class="navbar-brand" href="#">
+      GestionSPRING
+      <img src="static/img/logo.png" th:src="@{/img/logo.png}"width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/listar">Clientes</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Administrador
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="/logout">Logout</a>
+              
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+      
+  
+  <div class="alert alert-info" role="alert">
+    <p class="text">Utilizar la barra para buscar por nombre, telefono o equipo!</p> 
+  </div>
+  
+  <div class="container-fluid">
+    <form th:action="@{/admin/listarproductos/}">
+        <div class="input-group">
+          <input type="text" class= "form-control" name="busqueda" id="busqueda" th:value="${busqueda}" required placeholder="Buscar...">
+          <div class="input-group-append" id="button-addon4">
+            <input type="submit" value="Search" button class="btn btn-outline-secondary"></button>
+            <input type="button" value="Clear" id="btnClear" onclick="clearSearchProductos()" button class="btn btn-outline-secondary"></button>
+          </div>	
+        </div>	 	  	
+      </form>
+  </div>
+  
+  
+  <div class="container">
+    <a th:href="@{/admin/listarproductos/new}" class="btn btn-primary btn-lg btn-block">Nuevo Producto</a>
+  </div>
+    
+  
+  
+  
+  <div class="container-fluid">
+    <table class = "table-responsive table-bordered">
+      <thead> 
+        <tr>
+          <th scope="col-6">ID</th>
+          <th scope="col-6">MARCA</th>
+          <th scope="col-6">MODELO</th>
+          <th scope="col-6">PRECIO COMPRA</th>
+          <th scope="col-6">PRECIO ORIGINAL</th>
+          <th scope="col-6">CANTIDAD</th>
+          <th scope="col-6">ACCIONES</th>
+          
+        </tr>
 
+      </thead>
 
-    <!--Tabla que trae datos desde base de datos-->
-    <div class="container mt-4">
+      <tbody>
+        <tr th:each = "producto:${productos}">
+          <th scope="row" th:text="${producto.idproducto}"></td>
+          <td  th:text="${#strings.toUpperCase(producto.marca)}"></td>
+          <td  th:text="${#strings.toUpperCase(producto.modelo)}"></td>
+          <td  th:text="${producto.precioCompra}"></td>
+          <td  th:text="${producto.precioVenta}"></td>      
+          <td  th:text="${producto.cantidad}"></td>
+          
+          <td>
+
+            <a th:href="@{/admin/editarproducto/}+${producto.idproducto}" class ="btn btn-warning"> 
+              <i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; <p>Editar!</p> 
+            </a>
+            
+            <a type= "button" th:onclick="eliminarproducto([[${producto.idproducto}]])" class = "btn btn-danger" href="#">
+              <span class="fas fa-trash-alt" aria-hidden="true"></span> <p>Eliminar!</p> 
+            </a>
+            
+          </td>
         
-        <!--  Barra de busqueda -->
-        <form th:action="@{/admin/listarproductos/}">
-			<div class="input-group">
-			  <input type="text" name="busqueda" id="busqueda" size="80" th:value="${busqueda}" required placeholder="Buscar...">
-			  <div class="input-group-append" id="button-addon4">
-			    <input type="submit" value="Search" button class="btn btn-outline-secondary"></button>
-			    <input type="button" value="Clear" id="btnClear" onclick="clearSearchProductos()" button class="btn btn-outline-secondary"></button>
-			  </div>
-			</div>
-		</form>
-		<br> 
-		
-		<div class="alert alert-info" role="alert">
-		  Usar clear luego de la busqueda para volver al listado!
-		</div>
-	
-        <a type="button" th:href="@{/admin/listarproductos/new}" class="btn btn-primary btn-lg btn-block">Nuevo</a>
-       
-    	
-    	
-	    	
-        <table class = "table">
-            <thead> 
-                <tr >
-                    <th>ID</th>
-                    <th>MARCA</th>
-                    <th>MODELO</th>
-                    <th>PRECIO ALTERNATIVO</th>
-                    <th>PRECIO ORIGINAL</th>
-                    <th>CANTIDAD</th>
-                </tr>
+        </tr>
 
-            </thead>
+    
+      </tbody>
 
-            <tbody>
-                <tr th:each = "producto:${productos}">
-                    <td th:text="${producto.idproducto}"></td>
-                    <td  th:text="${producto.marca}"></td>
-                    <td  th:text="${producto.modelo}"></td>
-                    <td  th:text="${producto.precioCompra}"></td>
-                    <td  th:text="${producto.precioVenta}"></td>      
-                    <td  th:text="${producto.cantidad}"></td>
-                    
-                   
-                    <td >
-                        <a th:href="@{/admin/editarproducto/}+${producto.idproducto}" class ="btn btn-warning"> 
-                        	<i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Editar!
-                        </a>
-                        <!--Hace referencia a una URL dentro del controlador, concatena con el id de persona
-                        para asociar la URL con el ID de la persona correspondiente
-                        
-                        <a  th:href="@{/user/deleteproducto/}+${producto.idproducto}" class = "btn btn-danger"> Eliminar</a>
-                        
-                       -->
-                        <a th:onclick="eliminarproducto([[${producto.idproducto}]])" class = "btn btn-danger" href="#">
-                       		<i class="fas fa-trash-alt" aria-hidden="true"></i>&nbsp; Borrar 
-                        </a>
-                    </td>
+    </table>
 
-                </tr>
-            </tbody>
-
-        </table>
-    </div>
+  </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="funciones.js"></script>
     
-    
-
-
-    
    
-	
-    
-</body>
+  </body>
 </html>
