--- a/src/main/resources/templates/formProducto.html
+++ b/src/main/resources/templates/formProducto.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-   <!--JQUERY-->
+   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     
-    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina -->
+    <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+    <script src="/js/bootstrap.min.js"></script>
+        
+    <!--Iconos de FontAwesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
+    <script src="https://kit.fontawesome.com/76bcb4e810.js" crossorigin="anonymous"></script>
+
+    
+     <!-- SweetAlert -->
+    
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<script src="/funciones.js"></script>
     
 </head>
 <body>
@@ -14,56 +25,51 @@
     <!--Tabla que trae datos desde base de datos--
     asdjasodijasoidjiasjdo
     -->
-    <div class="card" >
-	    
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                <h3>Agregar Producto</h3>
+            </div>
+            
+            <div class="card-body">
+                <form th:action="@{/admin/saveproducto}" th:object=${producto} method="POST">
 
-        <div class="card-header">
-            <h3>Agregar Producto</h5>
+                    <div class="form-group">
+                        <label for="inputID">ID</label>
+                        <input th:field="*{idproducto}" type="number" min="0" class="form-control"/>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="inputMarca">Marca</label>
+                        <input th:field="*{marca}" type="text" class="form-control"/>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="inputModelo">Modelo</label>
+                        <input th:field="*{modelo}" type="text" class="form-control"/>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="inputPrecioCompra">Precio Compra</label>
+                        <input th:field="*{precioCompra}" type="number" min="0" class="form-control"/>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="inputPrecioVenta">Precio Venta</label>
+                        <input th:field="*{precioVenta}" type="number" min="0" class="form-control"/>
+                    </div>                
+                    
+                    <div class="form-group">
+                        <label for="inputCantidad">Cantidad</label>
+                        <input th:field="*{cantidad}" type="number" min="0" class="form-control"/>
+                    </div>
+                    <button type="submit" class="btn btn-primary" >Guardar</button>
+                </form>
+
+            </div>
 
         </div>
-        
-        <div class="card-body">
-          
-            <form th:action="@{/admin/saveproducto}" th:object=${producto} method="POST">
-
-                
-                <div class="form-group">
-	                    <label>ID</label>
-	                    <input th:field="*{idproducto}" type="number" min="0" class="form-control"/>
-	   		    </div>
-                
-				
-                <div class="form-group">
-                    <label>Marca</label>
-                    <input th:field="*{marca}" type="text" class="form-control"/>
-                </div>
-
-                <div class="form-group">
-                    <label>Modelo</label>
-                    <input th:field="*{modelo}" type="text" class="form-control"/>
-                </div>
-                
-                <div class="form-group">
-                    <label>Precio Compra</label>
-                    <input th:field="*{precioCompra}" type="number" min="0" class="form-control"/>
-                </div>
-               
-                <div class="form-group">
-                    <label>Precio Venta</label>
-                    <input th:field="*{precioVenta}" type="number" min="0" class="form-control"/>
-                </div>
-                
-                
-                
-                <div class="form-group">
-                    <label>Cantidad</label>
-                    <input th:field="*{cantidad}" type="number" min="0" class="form-control"/>
-                </div>
-				<button type="submit" class="btn btn-primary" >Guardar</button>
-            </form>
-            
-        
     </div>
-   
+    
 </body>
 </html>
