Agrego Botones de cancelar en formularios

--- a/src/main/resources/templates/formProducto.html
+++ b/src/main/resources/templates/formProducto.html
@@ -64,6 +64,8 @@
                         <input th:field="*{cantidad}" type="number" min="0" class="form-control"/>
                     </div>
                     <button type="submit" class="btn btn-primary" >Guardar</button>
+                    <button class=" btn btn-danger" onclick="clearSearch()">Cancelar</button>
+                    
                 </form>
 
             </div>
