--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -18,7 +18,6 @@
      <!-- SweetAlert -->
     
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-	<script src="/funciones.js"></script>
     
 </head>
 <body>
@@ -75,13 +74,14 @@
                 </div>
                 
                 <button type="submit" class="btn btn-primary" >Guardar</button>
-                <a class=" btn btn-danger"href="admin/listar">Cancelar</a>
+                <button class=" btn btn-danger" onclick="clearSearch()">Cancelar</button>
             
             </form>
 
 
         </div>
     </div>
-
+    
+	
 </body>
 </html>
