--- a/src/main/resources/templates/formProducto.html
+++ b/src/main/resources/templates/formProducto.html
@@ -35,10 +35,8 @@
                 <form th:action="@{/admin/saveproducto}" th:object=${producto} method="POST">
 
                     <div class="form-group">
-                        <label for="inputID">ID</label>
-                        <input th:field="*{idproducto}" type="number" min="0" class="form-control"/>
-                    </div>
-                    
+						<input type="hidden" th:field="*{idproducto}" id="idproducto">
+               		</div>	
                     <div class="form-group">
                         <label for="inputMarca">Marca</label>
                         <input th:field="*{marca}" type="text" class="form-control"/>
