Cambios diseño de tablas

--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -81,7 +81,7 @@
   
   
   <div class="container-fluid pt-3">
-    <table class = "table-responsive table-bordered">
+    <table class = "table-responsive table-bordered table-striped text-center">
       <thead> 
         <tr>
           <th class="col-sm-1">ID</th>
