--- a/src/main/resources/templates/listaProductos.html
+++ b/src/main/resources/templates/listaProductos.html
@@ -80,17 +80,17 @@
   
   
   
-  <div class="container-fluid pt-3 mr-auto">
-    <table class = "table-responsive table-bordered">
+  <div class="container-fluid pt-3 mx-auto">
+    <table class = "table-responsive table-bordered table-striped text-center">
       <thead> 
         <tr>
-          <th scope="col-1">ID</th>
-          <th scope="col-2">MARCA</th>
-          <th scope="col-1">MODELO</th>
-          <th scope="col-1">PRECIO COMPRA</th>
-          <th scope="col-1">PRECIO ORIGINAL</th>
-          <th scope="col-1">CANTIDAD</th>
-          <th scope="col-3">ACCIONES</th>
+          <th class="col-sm-1">ID</th>
+          <th class="col-sm-2">MARCA</th>
+          <th class="col-sm-1">MODELO</th>
+          <th class="col-sm-1">PRECIO COMPRA</th>
+          <th class="col-sm-1">PRECIO ORIGINAL</th>
+          <th class="col-sm-1">CANTIDAD</th>
+          <th class="col-sm-1">ACCIONES</th>
           
         </tr>
 
