--- a/src/main/resources/templates/listaProductos.html
+++ b/src/main/resources/templates/listaProductos.html
@@ -34,6 +34,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        
         <ul class="navbar-nav">
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -41,15 +42,19 @@
           <li class="nav-item">
             <a class="nav-link" href="/admin/listar">Clientes</a>
           </li>
+          
+        </ul>
+
+        <ul class="navbar-nav ml-md-auto">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Administrador
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="/logout">Logout</a>
-              
             </div>
           </li>
+
         </ul>
       </div>
     </nav>
@@ -131,6 +136,16 @@
     </table>
 
   </div>
+  
+  <div class="container-fluid pt-3">
+    <div class="row bg-dark text-white">
+      <div class="col-md-12 text-right">
+        <div class="text-white "></div>
+          Desarrollado con <i class= "fas fa-heart"></i> por Thomas Díaz - Estudiante de UNSAdA
+        </div>
+      </div>
+  </div>
+ 
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
