Footer + Estilo para footer estatico

--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -9,6 +9,7 @@
     <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina -->
     <link rel="stylesheet" type="text/css" href="static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
     <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href = "static/css/static-footer.css" th:href="@{/css/static-footer.css}" >
         
     <!--Iconos de FontAwesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
@@ -142,14 +143,18 @@
     </table>
 
   </div>
-  <div class="container-fluid pt-3">
-    <div class="row bg-dark text-white">
-      <div class="col-md-12 text-right">
-        <div class="text-white "></div>
-          Desarrollado con <i class= "fas fa-heart"></i> por Thomas Díaz - Estudiante de UNSAdA
+  
+  <footer class="footer mt-3">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-12 text-right bg-dark text-center text-white">
+          <div class="text-white "></div>
+            Desarrollado con <i class= "fas fa-heart"></i> por Thomas Díaz- Estudiante de la UNSAdA
+          </div>
         </div>
-      </div>
-  </div>
+    </div>
+  </footer>
+  
     
 
     
