--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -24,48 +24,41 @@
 </head>
 <body>
   
-      <!---NavBar header-->
-  <div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">
-      GestionSPRING
-      <img src="static/img/logo.png" th:src="@{/img/logo.png}"width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <!---NavBar header-->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+    GestionSPRING
+    <img src="static/img/logo.png" th:src="@{/img/logo.png}"width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/listarproductos">Productos</a>
+        </li>
+      </ul>
       
+      <ul class="navbar-nav ml-md-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Administrador
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="/logout">Logout</a>
+          </div>
+        </li>
+      </ul>
+    </div>
 
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/admin/listarproductos">Productos</a>
-          </li>
-        </ul>
-        
-        <ul class="navbar-nav ml-md-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Administrador
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/logout">Logout</a>
-            </div>
-          </li>
-        
-        
-        </ul>
-
-      </div>
-
-      
-    </nav>
-  </div>
+    
+  </nav>
+  
       
   
   <div class="alert alert-info" role="alert">
@@ -86,7 +79,7 @@
   
   
   <div class="container pt-3">
-    <a th:href="@{/admin/listar/new}" class="btn btn-primary btn-lg btn-block">Nuevo</a>
+    <a th:href="@{/admin/listar/new}" class="btn btn-seconday btn-lg btn-block">Nuevo</a>
   </div>
     
   
