Cambios vista profe

--- a/src/main/resources/templates/lista_profesores.html
+++ b/src/main/resources/templates/lista_profesores.html
@@ -72,7 +72,7 @@
   <div class="container">
     <form>
         <div class="input-group">
-          <input type="text" class= "form-control" required placeholder="Buscar...">
+          <input type="text" class= "form-control" required placeholder="Buscar datos del profesor...">
           <div class="input-group-append" id="button-addon4">
             <input type="submit" value="Buscar" button class="btn btn-outline-secondary"/>
             <input type="button" value="Limpiar" id="btnClear" button class="btn btn-outline-secondary"/>
@@ -86,9 +86,9 @@
     <div class="d-flex flex-row justify-content-center">
         <div class="row">
           <div class="p-2">
-            <div class=form-group><input type="date" class="form-control" id="fecha"></div>
+            <div class=form-group><input type="text" placeholder="Buscar..." class="form-control" id="fecha"></div>
           </div>
-          <div class="p-2"><button type="submit" class= "btn btn-secondary">Filtrar</button></div>
+          <div class="p-2"><button type="submit" class= "btn btn-secondary">Consultar asistencias</button></div>
           <div class="p-2"><button class="btn btn-primary btn-lg">Nuevo profesor</button></div>
         </div>
     </div>
@@ -138,8 +138,8 @@
         
         </tr>
         <tr>
-          <td>24783031212</td>
-          <th>Natalia</th>
+          <th>24783031212</td>
+          <td>Natalia</th>
           <td>Díaz </td>
           <td>23121221 </td>
           <td>ndiaz@docentes.baradero.com</td>
