--- a/src/main/resources/templates/lista_clases.html
+++ b/src/main/resources/templates/lista_clases.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clientes</title>
+    <title>Clases</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     
     <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina -->
@@ -45,10 +45,10 @@
         <ul class="navbar-nav">
           
           <li class="nav-item active">
-            <a class="nav-link" href="#"> <h5>Administracion de profesores</h1> <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#"> <h5>Administracion de Clases</h1> <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin/lista_clases"><h5>Administrar Clases</h5></a>
+            <a class="nav-link" href="/admin/lista_profesores"><h5>Administrar Profesores</h5></a>
           </li>
         </ul>
         
@@ -72,7 +72,7 @@
   <div class="container">
     <form>
         <div class="input-group">
-          <input type="text" class= "form-control" required placeholder="Buscar datos del profesor...">
+          <input type="text" class= "form-control" required placeholder="Buscar datos de clase...">
           <div class="input-group-append" id="button-addon4">
             <input type="submit" value="Buscar" button class="btn btn-outline-secondary"/>
             <input type="button" value="Limpiar" id="btnClear" button class="btn btn-outline-secondary"/>
@@ -86,10 +86,10 @@
     <div class="d-flex flex-row justify-content-center">
         <div class="row">
           <div class="p-2">
-            <div class=form-group><input type="text" placeholder="Buscar..." class="form-control" id="fecha"></div>
+            <div class=form-group><input type="date" class="form-control" id="fecha"></div>
           </div>
-          <div class="p-2"><button type="submit" class= "btn btn-secondary">Consultar asistencias</button></div>
-          <div class="p-2"><button class="btn btn-primary btn-lg">Nuevo profesor</button></div>
+          <div class="p-2"><button type="submit" class= "btn btn-secondary">Filtrar</button></div>
+          <div class="p-2"><button class="btn btn-primary btn-lg">Nueva clase</button></div>
         </div>
     </div>
   </div>
@@ -99,65 +99,43 @@
     <table class = "table-responsive table-bordered table-striped text-center">
       <thead> 
         <tr>
-          <th class="col-sm-1">DNI</th>
-          <th class="col-sm-1">NOMBRE</th>
-          <th class="col-sm-1">APELLIDO</th>
-          <th class="col-sm-1">TELEFONO</th>
-          <th class="col-sm-1">EMAIL</th> 
-          <th class="col-sm-2">ACCIONES</th>
+            <th class="col-sm-1">NOMBRE</th>
+            <th class="col-sm-1">DEPORTE</th>
+            <th class="col-sm-1">LUGAR</th>
+            <th class="col-sm-1">PROFESOR</th>
+            <th class="col-sm-1">ALUMNOS</th>
+            <th class="col-sm-4">ACCIONES</th>
         </tr>
   
       </thead>
   
       <tbody>
         <tr>
-          <th>2478309012 </th>
-          <td>Juan</td>
-          <td>Perez </td>
-          <td>23121221 </td>
-          <td>jperez@docentes.baradero.com</td>
+          <th>Futbol 13</th>
+          <td>Futbol</td>
+          <td>polideportivo</td>
+          <td>Juan Perez </td>
+          <td>32/40</td>
           <td>
             <div class="d-flex align-items-stretch">
-              <div class="p-2">
+              <div class="p-1">
                 <a class ="btn btn-warning"> 
                   <span class="fa fa-pencil fa-fw"></span>Editar!
                 </a>
               </div>
-              <div class="p-2">
+              <div class="p-1">
                 <a  class = "btn btn-danger">
                   <span class="fas fa-trash-alt"></span>Eliminar!
                 </a>
               </div>
-              <div class="p-2">
+              <div class="p-1">
                 <a class = "btn btn-secondary">
-                  <span class="fas fa-eye"></span>Ver más
+                  <span class="fas fa-clock"></span>Horarios
                 </a>
               </div>
-            </div>          
-          </td>
-        
-        </tr>
-        <tr>
-          <th>24783031212</td>
-          <td>Natalia</th>
-          <td>Díaz </td>
-          <td>23121221 </td>
-          <td>ndiaz@docentes.baradero.com</td>
-          <td>
-            <div class="d-flex align-items-stretch">
-              <div class="p-2">
-                <a class ="btn btn-warning"> 
-                  <span class="fa fa-pencil fa-fw"></span>Editar!
-                </a>
-              </div>
-              <div class="p-2">
-                <a  class = "btn btn-danger">
-                  <span class="fas fa-trash-alt"></span>Eliminar!
-                </a>
-              </div>
-              <div class="p-2">
+              <div class="p-1">
                 <a class = "btn btn-secondary">
-                  <span class="fas fa-eye"></span>Ver más
+                  <span class="fas fa-book"></span>Profesor...
                 </a>
               </div>
             </div>          
@@ -170,28 +148,3 @@
     </table>
   </div>
   
-
-      
-    
- 
-  
-  <!--footer-->
-  <footer class="footer mt-3">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12 text-right bg-dark text-center text-white">
-          <div class="text-white "></div>
-            Desarrollado por Juan Cruz Colazo, Ignacio Alacia, Valentin Kyska y Thomas Díaz- Estudiantes de la UNSAdA
-          </div>
-        </div>
-    </div>
-  </footer>
-    
-  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="funciones.js"></script>
-  
-      
-    
-</body>
-</html>
